feat: Implement talent module and configure navigation

--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
@@ -1,1 +1,5 @@
 <p>list works!</p>
+<button mat-button mat-flat-button color="primary" (click)="onNewTalent()">
+  <mat-icon>add</mat-icon>
+  Nuevo Talento
+</button>
