--- a/Front/Banco-de-Talentos/src/app/auth/login/login.component.html
+++ b/Front/Banco-de-Talentos/src/app/auth/login/login.component.html
@@ -12,7 +12,7 @@
   </mat-form-field>
 
   <button mat-button mat-flat-button color="primary" (click)="onLogin()">
-    <mat-icon>save</mat-icon>
+    <mat-icon>login</mat-icon>
     Ingresar
   </button>
 </div>
