--- a/Front/Banco-de-Talentos/src/app/auth/login/login.component.html
+++ b/Front/Banco-de-Talentos/src/app/auth/login/login.component.html
@@ -1,7 +1,44 @@
-<div class="flex">
-  <span class="">Login</span>
+<div class="login-container">
+  <div class="p-4 shadow-2 border-round w-full lg:w-6">
+    <div class="text-center mb-5">
+      <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
+      <span class="text-600 font-medium line-height-3"
+        >Don't have an account?</span
+      >
+      <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer"
+        >Create today!</a
+      >
+    </div>
 
-  <button mat-button mat-flat-button color="primary" (click)="onLogin()">
-    Ingresar
-  </button>
+    <div>
+      <label for="email1" class="block text-900 font-medium mb-2">Email</label>
+      <input
+        id="email1"
+        type="text"
+        placeholder="Email address"
+        pInputText
+        class="w-full mb-3"
+      />
+
+      <label for="password1" class="block text-900 font-medium mb-2"
+        >Password</label
+      >
+      <input
+        id="password1"
+        type="password"
+        placeholder="Password"
+        pInputText
+        class="w-full mb-3"
+      />
+
+      <button
+        pButton
+        pRipple
+        label="Sign In"
+        icon="pi pi-user"
+        class="w-full"
+        (click)="onLogin()"
+      ></button>
+    </div>
+  </div>
 </div>
