--- a/Front/Banco-de-Talentos/src/app/auth/login/login.component.scss
+++ b/Front/Banco-de-Talentos/src/app/auth/login/login.component.scss
@@ -1,5 +1,6 @@
-.flex {
+.login-container {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
