--- a/Front/Banco-de-Talentos/src/styles.scss
+++ b/Front/Banco-de-Talentos/src/styles.scss
@@ -6,3 +6,10 @@
 @import "../node_modules/primeicons/primeicons.css";
 
 @import "../node_modules/primeng/resources/themes/tailwind-light/theme.css";
+
+/*font derived from the PrimeNG*/
+body {
+  font-family: var(--font-family);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
