--- a/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.html
@@ -1,4 +1,4 @@
-<div class="h-full flex flex-warp align-items-center justify-content-center">
+<div class="h-full pt-5 flex flex-warp align-items-center justify-content-center">
     <p-card class="w-7 bg-cover bg-center border-white-alpha-30 border-2 border-round h-full flex align-items-center justify-content-center"
     [style]="{'width': '100%', 'height': '100%'}">
         <ng-template pTemplate="header">
@@ -16,6 +16,7 @@
                         label="Volver"
                         class="p-button-outlined p-button-info"
                         [style]="{'height': '50px'}"
+                        (click)="onVolver()"
                     ></button>
                     </div>
                     <div class="p-2">
@@ -35,14 +36,43 @@
         <div class="p-4 pt-3">
             <p-scrollPanel [style]="{ height: '500px' }" styleClass="custombar1">
                 <div>
+                    <h3>Nombre completo</h3>
+                    <p>Nombres</p>
+                    <input pInputText placeholder="Nombres" class="w-full"/>
+                    <p>Apellido paterno</p>
+                    <input pInputText placeholder="Apellido paterno" class="w-full"/>
+                    <p>Apellido materno</p>
+                    <input pInputText placeholder="Apellido materno" class="w-full"/>
+                </div>
+                <div>
                     <h3>Curriculum Vitae</h3>
-                    <button pButton class="p-button-outlined" label="Curriculum Vitae"></button>
+                    <div class="flex flex-warp align-items-center justify-content-center">
+                        <button pButton class="p-button-outlined border-500 w-full flex flex-column">
+                            <i class="pi pi-cloud-upload px-2 pt-5" style="font-size: 1.5rem; color: #708090"></i>
+                            <span class="px-3 pt-5 flex align-items-center justify-content-center font-bold border-round" style="color: #0B85C3">Curriculum Vitae</span>
+                            <span class="text-sm text-500 pt-1 flex align-items-center justify-content-center border-round">PDF (max. 800x400px)</span>
+                        </button>
+                    </div>
                 </div>
                 <div>
                     <h3>Foto de perfil</h3>
-                    <button pButton class="p-button-outlined" label="Foto de perfil"></button>
+                    <div class="flex flex-warp align-items-center justify-content-center">
+                        <button pButton class="p-button-outlined border-500 w-full flex flex-column">
+                            <i class="pi pi-cloud-upload px-2 pt-5" style="font-size: 1.5rem; color: #708090"></i>
+                            <span class="px-3 pt-5 flex align-items-center justify-content-center font-bold border-round" style="color: #0B85C3">Foto de perfil</span>
+                            <span class="text-sm text-500 pt-1 flex align-items-center justify-content-center border-round">PNG o JPG (max. 800x400px)</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="h-7rem">
+                    <h3>Descripción</h3>
+                    <input pInputText placeholder="Descripción" class="w-full h-5rem"/>
                 </div>
                 <div>
+                    <h3>Puesto actual</h3>
+                    <p-dropdown [options]="puestos" placeholder="Puesto Actual" optionLabel="name" [showClear]="true"></p-dropdown>
+                </div>
+                <div class="pt-1">
                     <h3>Medios Sociales</h3>
                     <p>Link de LinkedIn</p>
                     <input pInputText placeholder="Nombre de la empresa" class="w-full"/>
@@ -51,8 +81,12 @@
                 </div>
                 <div>
                     <h3>Banda salarial</h3>
-                    <p-toggleButton onLabel="Soles" offLabel="Soles" onIcon="pi pi-check" offIcon="pi pi-times"></p-toggleButton>
-                    <p-toggleButton onLabel="Dolares" offLabel="Dolares" onIcon="pi pi-check" offIcon="pi pi-times"></p-toggleButton>
+                    <div class="pb-1">
+                        <p-toggleButton onLabel="Soles" offLabel="Soles" onIcon="pi pi-check" offIcon="pi pi-times" [style]="{ width:'100%' }"></p-toggleButton>
+                    </div>
+                    <div class="pt-1">
+                        <p-toggleButton onLabel="Dolares" offLabel="Dolares" onIcon="pi pi-check" offIcon="pi pi-times" [style]="{ width:'100%' }"></p-toggleButton>
+                    </div>
                     <div class="formgrid grid">
                         <div class="field col">
                             <p>Monto Inicial</p>
@@ -70,7 +104,9 @@
                     <input pInputText placeholder="Nombre de la habilidad" class="w-full"/>
                     <p>Años de experiencia</p>
                     <input pInputText placeholder="Nro. de años" class="w-full"/>
-                    <button pButton type="button" icon="pi pi-plus" label="Agregar más" class="p-button-text"></button>
+                    <div class="pt-3">
+                        <button pButton type="button" icon="pi pi-plus" label="Agregar más" class="p-button-text"></button>
+                    </div>
                 </div>
                 <div>
                     <h3>Experiencias laborales</h3>
@@ -90,8 +126,10 @@
                         </div>
                     </div>
                     <p-checkbox [binary]="true" inputId="binary" label="Hasta la actualidad"></p-checkbox>
+                    <div class="pt-3">
+                        <button pButton type="button" icon="pi pi-plus" label="Agregar más" class="p-button-text"></button>
+                    </div>
                 </div>
-                <button pButton type="button" icon="pi pi-plus" label="Agregar más" class="p-button-text"></button>
                 <div>
                     <h3>Experiencias educativas</h3>
                     <p>Institución</p>
@@ -112,15 +150,22 @@
                         </div>
                     </div>
                     <p-checkbox [binary]="true" inputId="binary" label="Hasta la actualidad"></p-checkbox>
+                    <div class="pt-3">
+                        <button pButton type="button" icon="pi pi-plus" label="Agregar más" class="p-button-text"></button>
+                    </div>
                 </div>
-                <button pButton type="button" icon="pi pi-plus" label="Agregar más" class="p-button-text"></button>
-                <div>
+                <div class="pb-5">
                     <h3>Idiomas</h3>
                     <p>Idioma</p>
                     <p-dropdown [options]="idiomas" placeholder="Nombre del idioma" optionLabel="name" [showClear]="true"></p-dropdown>
                     <p>Nivel</p>
                     <p-dropdown [options]="niveles" placeholder="Nivel del idioma" optionLabel="name" [showClear]="true"></p-dropdown>
-                    <button pButton type="button" icon="pi pi-plus" label="Agregar más" class="p-button-text"></button>
+                    <div class="pt-4">
+                        <p-rating></p-rating>
+                    </div>
+                    <div class="pt-3">
+                        <button pButton type="button" icon="pi pi-plus" label="Agregar más" class="p-button-text"></button>
+                    </div>
                 </div>
             </p-scrollPanel>
         </div>
