--- a/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.scss
+++ b/Front/Banco-de-Talentos/src/app/features/talent/new-talent/new-talent.component.scss
@@ -6,6 +6,6 @@
     padding-top: 0;
 }
 
-.p-scrollpanel-content {
-    padding: 1;
+:host ::ng-deep .p-scrollpanel-content {
+    padding: 18px;
 }
