--- a/Front/Banco-de-Talentos/src/styles.scss
+++ b/Front/Banco-de-Talentos/src/styles.scss
@@ -10,6 +10,9 @@
 /*font derived from the PrimeNG*/
 body {
   font-family: var(--font-family);
+  padding: 0;
+  margin: 0;
+  min-height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
