--- a/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/dashboard/list/list.component.html
@@ -605,24 +605,49 @@
   </div>
 </section>
 <p-dialog
-  header="Agregar una nueva habilidad técnica"
   [(visible)]="skillDialog"
+  [modal]="true"
+  [closable]="false"
 >
+  <ng-template pTemplate="header">
+    <div class="flex flex-column">
+      <div class="flex align-items-start justify-content-start h-3rem">
+        <h2>Agregar una nueva habilidad técnica</h2>
+      </div>
+      <div class="flex align-items-start justify-content-start h-2rem">
+        <p>Agrega tu nueva experiencia técnica</p>
+      </div>
+    </div>
+  </ng-template>
+  <div>
+    <h4>Habilidad técnica</h4>
+    <input pInputText placeholder="Nombre de la empresa" class="w-full"/>
+  </div>
+  <div>
+    <h4>Años de Experiencia</h4>
+    <p-inputNumber inputId="integeronly" [size]="50"></p-inputNumber>
+  </div>
   <ng-template pTemplate="footer">
-    <button
-      pButton
-      pRipple
-      label="Cancelar"
-      icon="pi pi-times"
-      class="p-button-text"
-      (click)="hideDialog()"
-    ></button>
-    <button
-      pButton
-      pRipple
-      label="Agregar"
-      icon="pi pi-check"
-      class="p-button-text"
-    ></button>
+    <div class="formgrid grid">
+      <div class="field col">
+        <button
+          pButton
+          pRipple
+          label="Cancelar"
+          icon="pi pi-times"
+          class="p-button-outlined p-button-info w-full"
+          (click)="hideDialog()"
+        ></button>
+      </div>
+      <div class="field col">
+        <button
+          pButton
+          pRipple
+          label="Agregar"
+          icon="pi pi-check"
+          class="p-button-success w-full"
+        ></button>
+      </div>
+    </div>
   </ng-template>
 </p-dialog>
