--- a/Front/Banco-de-Talentos/src/app/features/layout/layout.component.html
+++ b/Front/Banco-de-Talentos/src/app/features/layout/layout.component.html
@@ -1,22 +1,7 @@
-<p-menubar>
-  <ng-template pTemplate="start">
-    <img src="./assets/users/fractal-logo.png" alt="Logo" class="logo-image" />
-  </ng-template>
-  <ng-template pTemplate="end">
-    <div class="profile-info">
-      <p-avatar
-        image="./assets/users/2.jpg"
-        styleClass="mr-2"
-        size="large"
-        shape="circle"
-        class="pr-1"
-      ></p-avatar>
-      <div class="flex flex-column">
-        <span class="profile-name">Claudia Vasquez</span>
-        <span class="profile-role">Reclutador</span>
-      </div>
-    </div>
-  </ng-template>
-</p-menubar>
+<header class="navbar">
+  <shared-header></shared-header>
+</header>
 
-<router-outlet></router-outlet>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
