--- a/Front/Banco-de-Talentos/src/app/features/layout/layout.component.scss
+++ b/Front/Banco-de-Talentos/src/app/features/layout/layout.component.scss
@@ -1,12 +1,8 @@
-.profile-info {
-  display: flex;
-  align-items: center;
+.navbar {
+  height: 85px;
 }
 
-.profile-name {
-  font-weight: bold;
-}
-
-.profile-role {
-  color: #798294;
+.content {
+  height: calc(100vh - 85px);
+  background-color: #c3f85b;
 }
