feat: Divide the dashboard component into smaller components

--- a/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
+++ b/Front/Banco-de-Talentos/src/app/shared/components/control-panel/control-panel.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white py-3 px-3 sm:px-6 shadow-3 flex align-items-center">
+<div class="py-3 px-3 sm:px-6 flex align-items-center">
   <div class="flex flex-wrap border-round w-full">
     <div
       class="w-12 sm:w-4 font-bold p-2 flex align-items-center justify-content-center sm:justify-content-start"
@@ -11,7 +11,7 @@
       ></p-button>
     </div>
     <div
-      class="bg-blue-300 w-12 sm:w-8 font-bold p-2 flex flex-wrap align-items-center justify-content-center sm:justify-content-between"
+      class="w-12 sm:w-8 font-bold p-2 flex flex-wrap align-items-center justify-content-center sm:justify-content-between"
     >
       <div class="mx-2 mb-2 md:mb-0">
         <p-overlayPanel #hbd [style]="{ width: '300px' }">
